<resources>
    <string name="app_name" translatable="false">Maghrib Mengaji</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="error_scanner_cancelled">Scan cancelled</string>
    <string name="error_default_message">Error</string>
    <string name="failed_to_fetch_data">Failed to fetch data</string>
    <string name="submit">Submit</string>
    <string name="preliminary_score">Preliminary Score</string>
    <string name="upload">Upload</string>
    <string name="your_score_is_great_press_upload_to_send_your_score">Your Score is great. Press <b>Upload</b> to send your score</string>
    <string name="your_score_is_low">Your Score is below the KKM. Press <b>Retry</b> to rescan</string>
    <string name="volume">Volume</string>
    <string name="page">Page</string>
    <string name="retry">Retry</string>
    <string name="main_menu_home">Home</string>
    <string name="main_menu_ustadh">Ustadh</string>
    <string name="main_menu_volume">Volume</string>
    <string name="auth_email">Email Address</string>
    <string name="auth_password">Password</string>
    <string name="auth_login">Login</string>
    <string name="auth_login_google">Login with Google</string>
    <string name="auth_signup">Sign Up</string>
    <string name="auth_fullname">Full Name</string>
    <string name="auth_phone_number">Phone Number</string>
    <string name="auth_forgot_password">Forgot password?</string>
    <string name="welcome_to">Welcome to</string>
    <string name="main_menu_profile">Profile</string>
    <string name="main_menu_contact">Contact Us</string>
    <string name="volume_x">Volume %1$s</string>
    <string name="page_x">Page %1$s</string>
    <string name="in_progress">In progress</string>
    <string name="last_written">Last written</string>
    <string name="quran_page_image_description">Quran Page</string>
    <string name="sign_up_successful">Sign Up Successful</string>
    <string name="login_successful">Login successful</string>
    <string name="sign_out">Sign Out</string>
    <string name="write_your_own_mushaf">Write your own Mushaf</string>
    <string name="continue_your_koran_journey">Continue your Koran journey</string>
    <string name="start_your_koran_journey">Start your Koran journey</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="already_have_account">Already have account?</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="full_name_is_required">Full name is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="invalid_email_format">Invalid email format!</string>
    <string name="password_must_be_at_least_6_characters_long">Password must be at least 6 characters long!</string>
    <string name="upload_successful">Upload successful</string>
    <string name="recite">Recite</string>
    <string name="recite_page">Recite Page %1$s</string>
    <string name="audio_page">Audio Page %1$s</string>
    <string name="check_result">Check Result</string>
    <string name="overall_score">Overall Score</string>
    <string name="similarity">Similarity</string>
    <string name="tidiness">Tidiness</string>
    <string name="accuracy">Accuracy</string>
    <string name="consistency">Consistency</string>
    <string name="ustadh_updated_successfully">Ustadh updated successfully!</string>
    <string name="no_data">No data</string>
    <string name="student_list">Student List</string>
    <string name="score">Score</string>
    <string name="student">Student</string>
    <string name="finished">Finished</string>
    <string name="all">All</string>
    <string name="saved_in">Saved in %1$s</string>
    <string name="no_selected_file">No selected file</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="your_result_will_be_gone">Your result will be gone</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="with_ustadh">With Ustadh</string>
    <string name="failed_to_load_image">Failed to load image:</string>
    <string name="upload_failed">Upload failed. Please try again</string>
    <string name="salam" translatable="false">Assalaamu \'alaikum</string>
    <string name="poin_kurang" translatable="false">* Maaf poin antum kurang</string>
    <string name="welcome_back">Welcome back</string>
    <string name="permission_are_not_granted">Permissions are not granted</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="failed_to_create_new_student_data">Failed to create new Student data</string>
    <string name="your_similarity_score">Your similarity score is %1$s</string>
    <string name="remove_student">Remove student</string>
    <string name="contact">Contact</string>
    <string name="cant_pick_audio">Can\'t pick audio</string>
    <string name="cant_pick_image">Can\'t pick image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="press_back_to_close">Press back to close</string>
    <string name="invalid_score">Invalid score</string>
    <string name="score_cannot_be_more_than_100">Score cannot be more than 100</string>
    <string name="invalid_input">Invalid input</string>
    <string name="please_enter_valid_numbers">Please enter valid numbers</string>
    <string name="okay">Okay</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="user_do_not_have_phone_number">User do not have phone number</string>
    <string name="there_are_no_volumes_that_x_has_worked_on_yet">There are no volumes that %1$s has worked on yet</string>
    <string name="x_students">%1$d students</string>
    <string name="ust_x">Ust. %1$s</string>
    <string name="no_student_yet">No student yet</string>
    <string name="you_will_be_logged_out_from_this_account">You will be logged out from this account</string>
    <string name="chat_with_ustadh">Chat with Ustadh?</string>
    <string name="you_will_chat_with_ustadh">You will chat with Ustadh %1$s via WhatsApp</string>
    <string name="your_ustadh_hasnt_entered_his_whatsapp">Subhanallah, Ustadh %1$s has\'nt entered his WhatsApp number...</string>
    <string name="you_dont_have_ustadh">Subhanallah, You don\'t have an Ustadh yet</string>
    <string name="x_pages_completed">%1$d pages completed</string>
    <string name="explore_volumes">Explore volumes</string>
    <string name="verification">Verification</string>
    <string name="refresh">Refresh</string>
    <string name="send">Send</string>
    <string name="you_have_to_verify_email">You have to verify your email before using Maghrib Mengaji. Press Send button and click on the verification link sent to your email.</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="failed_to_send_verification_email">Failed to send verification email</string>
    <string name="continue_please_ensure_the_data_you_entered_is_correct">Continue? Please ensure the data you entered is correct</string>
    <string name="choose_ustadh">Choose Ustadh</string>
    <string name="an_email_containing_a_passowrd_reset_link_has_been_sent">An email containing a password reset link has been sent to your email address</string>
    <string name="volume_list">Volume List</string>
    <string name="student_successfully_removed">Student successfully removed</string>
    <string name="it_will_take_a_while_until_the_change_takes_an_effect">It will take a while until the change takes an effect</string>
    <string name="about">About</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="other">Other</string>
    <string name="terms_and_conditions_url" translatable="false">https://simsinfotekno.com/maghrib_mengaji_terms_and_conditions.html</string>
    <string name="app_email_address" translatable="false">solusi@simsinfotekno.com</string>
    <string name="send_email_to_the_developer">Send email to the developer?</string>
    <string name="app_about_dialog">
        Maghrib Mengaji v0.1-beta-2024
        \n\nMaghrib Mengaji is designed to facilitate the dual activities of reading and writing in one platform, serving as a portfolio for cognitive and motor skill development.
        \n\nData is encrypted in transit. Please do not worry about the data safety.
        \n\nBug report: solusi@simsinfotekno.com
    </string>
    <string name="you_will_open_an_external_link_using_browser">You will open an external link using browser</string>
    <string name="check_page">Show Page</string>
    <string name="invalid_phone">Invalid phone format!</string>
    <string name="no_internet">No internet</string>
    <string name="you_have_to_connect_internet">You have to connect internet in order to use Maghrib Mengaji app</string>
    <string name="network_status_x">Network status: %1$s</string>
    <string name="no_connection_please_connect">Subhanallah, no internet connection. Please connect to internet</string>
    <string name="please_enter_valid_phone">Please enter a valid phone number</string>
    <string name="juz_x" translatable="false">Juz %1$s</string>
    <string name="juz_list">Juz List</string>
    <string name="chapter_list">Chapter List</string>
    <string name="chapter_x">Surah %1$s</string>
    <string name="chapter_1">Al-Fatiha</string>
    <string name="chapter_2">Al-Baqara</string>
    <string name="chapter_3">Aal-E-Imran</string>
    <string name="chapter_4">An-Nisa</string>
    <string name="chapter_5">Al-Ma\'idah</string>
    <string name="chapter_6">Al-An\'am</string>
    <string name="chapter_7">Al-A\'raf</string>
    <string name="chapter_8">Al-Anfal</string>
    <string name="chapter_9">At-Tawbah</string>
    <string name="chapter_10">Yunus</string>
    <string name="chapter_11">Hud</string>
    <string name="chapter_12">Yusuf</string>
    <string name="chapter_13">Ar-Ra\'d</string>
    <string name="chapter_14">Ibrahim</string>
    <string name="chapter_15">Al-Hijr</string>
    <string name="chapter_16">An-Nahl</string>
    <string name="chapter_17">Al-Isra</string>
    <string name="chapter_18">Al-Kahf</string>
    <string name="chapter_19">Maryam</string>
    <string name="chapter_20">Ta-Ha</string>
    <string name="chapter_21">Al-Anbiya</string>
    <string name="chapter_22">Al-Hajj</string>
    <string name="chapter_23">Al-Mu\'minun</string>
    <string name="chapter_24">An-Nur</string>
    <string name="chapter_25">Al-Furqan</string>
    <string name="chapter_26">Ash-Shu\'ara</string>
    <string name="chapter_27">An-Naml</string>
    <string name="chapter_28">Al-Qasas</string>
    <string name="chapter_29">Al-Ankabut</string>
    <string name="chapter_30">Ar-Rum</string>
    <string name="chapter_31">Luqman</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="allow_notification">Allow notification</string>
    <string name="infaq">Infaq</string>
    <string name="use_ml_kit_scanner">Use ML Kit scanner</string>
    <string name="recommended_android_version_11_or_higher_if_the_app_crashes_turn_off_this_setting">Recommended on Android version 11 or higher. If the app crashes, turn off this setting</string>
    <string name="qr_code_check">QR Code check</string>
    <string name="check_the_qr_code_in_the_corner_of_the_page_when_scanning_if_the_qr_code_is_difficult_to_read_by_the_scanner_turn_off_this_setting">Check the QR code in the corner of the page when scanning. If the QR code is difficult to read by the scanner, turn off this setting.</string>
</resources>