<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_volume_list"
        android:icon="@drawable/rounded_apps_24"
        android:title="@string/volume_list" />

    <item
        android:id="@+id/menu_chapter_list"
        android:icon="@drawable/auto_stories_24px"
        android:title="@string/chapter_list" />

    <item
        android:id="@+id/menu_juz_list"
        android:icon="@drawable/book_24px"
        android:title="@string/juz_list"
        android:visible="false"/>

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/person_24px"
        android:title="@string/main_menu_profile"
        android:visible="false" />


    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/menu_tc"
                android:icon="@drawable/outline_article_24"
                android:title="@string/terms_and_conditions"
                android:visible="true" />

            <item
                android:id="@+id/menu_contact"
                android:icon="@drawable/rounded_chat_24"
                android:title="@string/main_menu_contact"
                android:visible="true" />
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/baseline_copyright_24"
                android:title="@string/about"
                android:visible="true" />
            <item
                android:id="@+id/menu_donation"
                android:icon="@drawable/outline_mosque_24"
                android:title="@string/infaq"
                android:visible="true" />
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/menu_edit_profile"
                android:icon="@drawable/person_24px"
                android:title="@string/edit_profile"
                android:visible="true"/>
            <item
                android:id="@+id/menu_setting"
                android:icon="@drawable/settings_24dp"
                android:title="@string/settings"
                android:visible="true"/>
            <item
                android:id="@+id/menu_sign_out"
                android:icon="@drawable/logout_24px"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>